@@ -1117,7 +1117,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '61';
+$wgStyleVersion = '62';
 
 
 # Server-side caching:
